app/assets/stylesheets/modules-base.css.scss
/* ... */
.seller-map-slide {
  > img {
    height: auto;
  }
}
.delivery {
  .date {
    color: $notice_text;
    font-size: larger;
    font-weight: bold;
  }
  .time-range {
    display: inline-block;
    margin: 0 0 .5em;
  }
}

/** Pagination */
.pagination {
  width: 300px;
  padding: .5em;
  border: 1px solid #e7e7e7;
  @include border-radius(100px);
  margin: 30px auto 0;
  background-color: #F9F7F7;
  font-size: .85em;
  text-align: center;

  .current {
    color: #aaa;
  }
}
@media screen and (max-width: 800px) {
  .pagination {
    width: auto;
    font-size: 1.2em;
    > span {
      display: inline-block;
      padding: .3em;
    }
  }
}

/** Story stuff */
.story-header {
  margin-bottom: 10px;
  font: normal 28px "Open Sans Condensed", sans-serif;

  + p {
    margin-top: 0;
  }
}

.how-story,
.who-story {
  color: #000;
}

/** Toolbar */
.toolbar {
  width: 100%;
  height: 80px;
  @include border-radius(5px);
  background: #f2f2f2;
  font-size: 0.1px;
  text-align: justify;

  &:after {
    display: inline-block;
    width: 100%;
    content: "";
  }
  .note {
    display: block;
    color: #000;
    font-size: smaller;
  }
  &[data-tools="6"] {
    > .tool {
      width: 16.66%;
    }
  }
  &[data-tools="5"] {
    > .tool {
      width: 19.99%;
    }
  }
  &[data-tools="4"] {
    > .tool {
      width: 23.9%;
    }
  }
  &[data-tools="3"] {
    > .tool {
      width: 33%;
    }
  }
}

@media screen and (max-width: $mobile_break) {
  .cancel-link {
    .note {
      display: none;
    }
  }
  .toolbar {
    height: auto;
    &[data-tools="4"] {
      > .tool {
        width: 100%;
        border-bottom: 1px solid #ddd;
      }
      > .tool:nth-child(4n) {
        border-bottom: 0;
      }
    }
    &[data-tools="3"] {
      > .tool {
        width: 100%;
        border-bottom: 1px solid #ddd;
      }
      > .tool:nth-child(3n) {
        border-bottom: 0;
      }
    }
  }
}
  .tool {
    display: inline-block;
    height: 80px;
    background: asset_url('center-rule.png') left top repeat-y;
    background: asset_url('center-rule@2x.png') left top / 1px auto repeat-y;
    font-size: 14px;
    text-align: center;
    vertical-align: middle;
    &:first-child {
      background-image: none;
    }
    &:after {
      display: inline-block;
      height: 80px;
      width: 0;
      content: "";
      vertical-align: middle;
    }
    &:last-child:after {
      margin: 0;
      border: 0;
    }
    > a {
      display:inline-block;
      vertical-align: middle;
    }
  }

  @media screen and (max-width: $mobile_break) {
    .tool {
      background: none;
    }
  }

/** Tooltips */
label ~ .tooltip {
  margin-top: .5em;
}

@mixin tooltip-icon {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  @include border-radius(50%);
  color: #fff;
  background: asset_url('tooltip-icon.png') center no-repeat;
  background: asset_url('tooltip-icon@2x.png') center / 100% no-repeat;
  font-size: .9em;
  font-weight: bold;
  line-height: 1em;
  text-align: center;
  cursor: pointer;
  @media screen and (max-width: $mobile_break) {
      width: 20px;
      height: 20px;
  }
}



.tooltip-popup {
  @include tooltip-icon;
}

.tooltip {
  @include tooltip-icon;

  &:after {
    position: absolute;
    right: 50%;
    bottom: 120%;
    display: none;
    z-index: 1000;
    min-width: 210px;
    max-width: 300px;
    padding: .5em 1em;
    border: solid 1px #aaa;
    @include border-radius(5px);
    @include box-shadow(2px 2px 5px rgba(0,0,0,0.3));
    content: attr(data-tooltip);
    color: #333;
    background: #fff;
    font-weight: normal;
    line-height: 1.1;
    text-align: left;
  }
  &:hover,
  &:active,
  &:focus {
    &:after {
      display: block;
    }
  }
  &.pull-right + .pull-right {
    margin-right: .5em;
  }
}
.tooltip--naked {
  color: inherit;
  background: none;

}
.tooltip--notice {
  &:after {
    border-color: $notice_text;
    color: $notice_text;
    background: $notice_bg;
  }
}

@media screen and (max-width: $mobile_break) {
  label ~ .tooltip {
    float: right;
    margin: 0 0 .5em;
  }
}

/** Seller Profiles */
.seller-map,
.seller-photo {
  position: relative;
  height: 240px;
  overflow: hidden;
  margin-bottom: 2em;

}
.seller-map  {
  > img {
    width: 100%;
  }
}
.seller-photo {
  > img {
    position: relative;
    display:block;
    max-height: 100%;
    margin: 0 auto;
  }
}
.transforms {
  .seller-photo > img {
    top: 50%;
    -webkit-transform: translateY(-50%);
       -moz-transform: translateY(-50%);
        -ms-transform: translateY(-50%);
            transform: translateY(-50%);
  }
}

/** Upcoming Delivery */
.upcoming-delivery {
  color: #000;

  h1 + .note {
    margin-top: -1em;
  }
  h2 + h3 {
    margin-top: 0;
  }
  hr {
    margin: 30px 0;
  }

  .order-summary-total,
  .upcoming-delivery-date,
  .upcoming-delivery-order {
    margin: 0 0 .5em;
    font: bold 24px 'Open Sans Condensed', 'Open Sans', OpenSans, sans-serif;
    display: inline-block;
    width: 100%;

    + .note {
      margin-top: -.5em;
    }
  }

  .location {
    margin: 0 0 1em;
    font: bold 20px 'Open Sans Condensed', 'Open Sans', OpenSans, sans-serif;
  }
  .vcard--seller,
  .vcard--buyer {
    margin: 0 0 2em;

    .fn {
      margin: 0;
    }
  }
  .delivery-notes{
    margin:20px 0 70px;
    border:1px dotted #666;
    padding:20px;
  }
}

.blank-state {
  text-align: center;
}

/** Apply Action Box **/

.action-header {
  margin: 0;
  width: 100%;
  &.js-fixed {
    padding-top: 20px;
    margin-top: -20px;
  }

  h4 {
    margin: 0;
  }

  .actions {
    padding: 10px;
    @include border-radius(5px);
    margin: 0 10px;
    background: #D9F6F9;
  }

  @media screen and (max-width: $mobile_break) {
    .actions {
      margin: 0 0 10px 0;

      select {
        width: 100%;
      }
      input {
        width: 100%;
        margin-bottom: 10px;
      }
    }
  }
}
/* ... */

